fix the flex property so it doesn't squish beyond content

--- a/sass/sticky-footer.scss
+++ b/sass/sticky-footer.scss
@@ -33,8 +33,11 @@ html, body{
 		display: flex;
 		flex-direction: column;
 		.global-wrapper{
-			flex: 1;
+			flex: 1 0 auto;
 		}
+	}
+	.something{
+		height: 55px;
 	}
 	&.extend{
 		background: #333;
